# vicommithooks

./: .gitignore  README.md  pyproject.toml
tests/: test.vi  test_attributes.py  test_version.py
vicommithooks/: __main__.py  attributes.py  version.py
